fix: inaccurate tile gaps

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -180,7 +180,6 @@ body {
 .grid__placeholder-item {
     width: 100%;
     cursor: pointer;
-    aspect-ratio: 1;
     background: linear-gradient(90deg, transparent, #6b6a70, transparent);
     background-size: 200%;
     background-repeat: no-repeat;
